# backend/docs/swagger.yaml
@@ -7,9 +7,13 @@ definitions:
         type: integer
       expiration_date:
         type: string
+      id:
+        type: string
       name:
         type: string
       purchase_date:
+        type: string
+      qrcode:
         type: string
       quantity:
         type: string
@@ -21,6 +25,19 @@ definitions:
         type: integer
       status:
         type: string
+    type: object
+  controllers.SendEmailRequest:
+    properties:
+      body:
+        type: string
+      subject:
+        type: string
+      to:
+        type: string
+    required:
+    - body
+    - subject
+    - to
     type: object
   controllers.User:
     properties:
@@ -183,6 +200,39 @@ paths:
       summary: Update a chemical by ID
       tags:
       - chemicals
+  /api/v1/email/send:
+    post:
+      consumes:
+      - application/json
+      description: Send an email using Twilio SendGrid
+      parameters:
+      - description: Email request data
+        in: body
+        name: email
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.SendEmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Send an email
+      tags:
+      - email
   /api/v1/users:
     get:
       description: Get a list of all users
@@ -322,4 +372,101 @@ paths:
       summary: Update a user by ID
       tags:
       - users
+  /sds/{chemicalIdNumber}:
+    delete:
+      description: Deletes the SDS file from Google Cloud Storage and removes the
+        SDS URL from the Firestore document
+      parameters:
+      - description: Chemical ID Number
+        in: path
+        name: chemicalIdNumber
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Delete the SDS file
+      tags:
+      - SDS
+    get:
+      description: Retrieves the SDS file URL for a given chemical
+      parameters:
+      - description: Chemical ID Number
+        in: path
+        name: chemicalIdNumber
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get the SDS file URL
+      tags:
+      - SDS
+    post:
+      consumes:
+      - multipart/form-data
+      description: Uploads a new SDS file to Google Cloud Storage and updates the
+        Firestore document with the SDS URL
+      parameters:
+      - description: Chemical ID Number
+        in: path
+        name: chemicalIdNumber
+        required: true
+        type: string
+      - description: SDS File
+        in: formData
+        name: sds
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Add a new SDS file
+      tags:
+      - SDS
 swagger: "2.0"
